<resources>
    <string name="app_name">Weather App</string>
    <string name="btn_set_city">Select city</string>
    <string name="btn_locate">Auto locate</string>
    <string name="btn_update">Update</string>
    <string name="btn_to_fav">To Favorite</string>
    <string name="btn_from_fav">From Favorite</string>

    <string name="error_loading">Error loading</string>

    //dialog
    <string name="input_name_city">Input name city</string>
    <string name="example">example : Moscow</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="city_not_found">City not found</string>


    <string name="tab_text_1">City</string>
    <string name="tab_text_2">Favorites</string>
    <string name="tab_text_3">Daily</string>
    <string name="tab_text_4">Settings</string>
    <string name="enable_GPS">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="enable_GPS_for_use_app">Enable GPS?</string>


    <string name="settings">Settings</string>

    <string name="auto_update">Interval update</string>
    <string name="on_auto_update">Turn On Auto update</string>
    <string name="update">Auto update</string>


    <string name="key_auto_update">key_auto_update</string>
    <string name="key_interval">key_interval</string>

    <string name="select_time">Select update interval</string>
    <string name="interval_update">Interval update</string>



    <string name="sev_morn">morn %1$s°C</string>
    <string name="sev_day">day %1$s°C</string>
    <string name="sev_eve">eve %1$s°C</string>
    <string name="sev_night">night %1$s°C</string>
    <string name="sev_pres">pressure %1$sGPa</string>
    <string name="sev_hun">humidity %1$s</string>
    <string name="sev_wind">wind %1$sm/c</string>
    <string name="sev_cl">clouds %1$s</string>


    <string name="city_last_update">last update %1$s</string>
    <string name="city_temp">temp %1$s°C</string>
    <string name="city_feel">feel like %1$s°C</string>
    <string name="city_max">max temp %1$s°C</string>
    <string name="city_min">min temp %1$s°C</string>
    <string name="city_hum">humidity %1$s</string>
    <string name="city_vis">visibility %1$sm</string>

    <string name="weth_visi">visibility %1$sm</string>
    <string name="weth_temp">temp %1$s°C</string>
    <string name="weth_feel">feel like %1$s°C</string>


</resources>
